# agent

./: Cargo.toml
src/: agent.rs  error.rs  main.rs
src/agent/: memory.rs  tools.rs
src/agent/tools/: doc_search_tool.rs  local.rs  mcp_client.rs
src/agent/tools/local/: doc_search_tool.rs
