[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = { version = "0.41.1", features = ["responses"] }
clap = { version = "4.6.1", features = ["derive"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
